POWR-1104 updates to fields, displays, styles

--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -40,6 +40,7 @@ third_party_settings:
         - field_featured_media
         - field_summary
         - field_body_content
+        - field_location
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -101,9 +102,18 @@ content:
     weight: 3
     label: above
     settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
+      view_mode: teaser
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_summary:
     weight: 1
