--- a/web/sites/default/config/field.field.node.location.field_address_or_entrance.yml
+++ b/web/sites/default/config/field.field.node.location.field_address_or_entrance.yml
@@ -17,7 +17,7 @@ field_name: field_address_or_entrance
 entity_type: node
 bundle: location
 label: 'Address or entrance'
-description: 'Enter the address or entrance location for this location. City and State are prefilled, but can be overridden. '
+description: 'Enter the address or entrance location for this location. City and State are prefilled, but can be overridden.  Ensure state, city, and country are empty to ensure that no get directions link is created.'
 required: false
 translatable: false
 default_value:
