--- a/web/sites/default/config/core.entity_view_display.node.location.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.location.teaser.yml
@@ -13,6 +13,8 @@ dependencies:
     - node.type.location
   module:
     - address
+    - address_map_link
+    - ds
     - panelizer
     - text
     - user
@@ -33,7 +35,20 @@ content:
     region: content
     label: hidden
     settings: {  }
-    third_party_settings: {  }
+    third_party_settings:
+      address_map_link:
+        link_address: '1'
+        map_link_type: google_maps_directions
+        map_link_position: after
+        map_link_text: 'Get directions'
+        map_link_new_window: '1'
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_hours_of_operation:
     type: text_default
     weight: 1
