POWR-1104 update permissions, and paragraphs associated with services

--- a/web/sites/default/config/core.entity_form_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.event.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.image_browser_embed
+    - entity_browser.browser.locations_browser
     - field.field.node.event.field_all_day
     - field.field.node.event.field_body_content
     - field.field.node.event.field_end_date
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.event.field_featured_media
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_location
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
     - field.field.node.event.field_search_keywords
@@ -19,6 +20,7 @@ dependencies:
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
     - node.type.event
+    - workflows.workflow.editorial
   module:
     - bootstrap_datepicker
     - chosen_field
@@ -139,7 +141,7 @@ content:
     region: content
   field_event_location:
     type: entity_reference_paragraphs
-    weight: 11
+    weight: 20
     settings:
       title: location
       title_plural: locations
@@ -178,6 +180,21 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_location:
+    weight: 11
+    settings:
+      entity_browser: locations_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      open: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: teaser
+    third_party_settings: {  }
+    type: entity_browser_entity_reference
+    region: content
   field_related_content:
     weight: 14
     settings:
@@ -197,7 +214,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_search_keywords:
-    weight: 26
+    weight: 19
     settings:
       size: 60
       placeholder: ''
