--- a/web/sites/default/config/core.entity_view_display.node.event.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.node.event.field_featured_media
     - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_location
     - field.field.node.event.field_related_content
     - field.field.node.event.field_reviewer
     - field.field.node.event.field_search_keywords
@@ -21,7 +22,6 @@ dependencies:
   module:
     - datetime
     - ds
-    - entity_reference_revisions
     - field_group
     - panelizer
     - text
@@ -42,17 +42,17 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - group_datetime
         - field_start_date
         - field_end_date
-        - group_datetime
+        - field_location
         - group_date_and_time
-        - field_all_day
-        - group_start_to_end_time
-        - field_event_location
-        - field_start_time
         - field_summary
-        - field_end_time
+        - group_start_to_end_time
+        - field_all_day
         - field_body_content
+        - field_start_time
+        - field_end_time
   field_group:
     group_date_and_time:
       children:
@@ -96,7 +96,7 @@ third_party_settings:
         - group_date_and_time
         - group_start_to_end_time
       parent_name: ''
-      weight: 1
+      weight: 0
       format_type: html_element
       format_settings:
         element: div
@@ -154,7 +154,7 @@ content:
             fi-def-at: false
   field_body_content:
     type: text_default
-    weight: 6
+    weight: 3
     region: content
     label: hidden
     settings: {  }
@@ -232,13 +232,12 @@ content:
             fi-def-at: false
     type: time_formatter
     region: content
-  field_event_location:
-    type: entity_reference_revisions_entity_view
-    weight: 4
-    label: hidden
+  field_location:
+    weight: 1
+    label: above
     settings:
-      view_mode: default
-      link: ''
+      view_mode: teaser
+      link: false
     third_party_settings:
       ds:
         ds_limit: ''
@@ -248,6 +247,7 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_start_date:
     weight: 0
@@ -323,7 +323,7 @@ content:
     type: time_formatter
     region: content
   field_summary:
-    weight: 5
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -360,6 +360,7 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_event_location: true
   field_featured_media: true
   field_group: true
   field_legacy_path: true
