--- a/web/sites/default/config/field.field.node.event.field_event_location.yml
+++ b/web/sites/default/config/field.field.node.event.field_event_location.yml
@@ -88,4 +88,25 @@ settings:
       audio:
         weight: 20
         enabled: false
+      card:
+        weight: 29
+        enabled: false
+      card_deck:
+        weight: 30
+        enabled: false
+      council_agenda_item:
+        weight: 32
+        enabled: false
+      council_agenda_section:
+        weight: 33
+        enabled: false
+      council_communication_item:
+        weight: 34
+        enabled: false
+      votes:
+        weight: 49
+        enabled: false
+      webform:
+        weight: 50
+        enabled: false
 field_type: entity_reference_revisions
