--- a/web/sites/default/config/field.field.node.event.field_location.yml
+++ b/web/sites/default/config/field.field.node.event.field_location.yml
@@ -1,26 +1,26 @@
-uuid: b8720b4c-af17-48e7-b141-ef4db7ba83f1
+uuid: 6105045e-55cc-4eaa-bf55-47705989100a
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_service_location
+    - field.storage.node.field_location
+    - node.type.event
     - node.type.location
     - node.type.service_location
-    - paragraphs.paragraphs_type.service_location
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: paragraph.service_location.field_service_location
-field_name: field_service_location
-entity_type: paragraph
-bundle: service_location
-label: 'Service location'
-description: ''
+id: node.event.field_location
+field_name: field_location
+entity_type: node
+bundle: event
+label: 'Located at'
+description: 'Select one or more locations for your event. You can add an address to a location to provide a get directions link based on the address and a Google Maps Directions link created from that address.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
