--- a/web/sites/default/config/field.field.paragraph.location.field_location_type.yml
+++ b/web/sites/default/config/field.field.paragraph.location.field_location_type.yml
@@ -5,8 +5,6 @@ dependencies:
   config:
     - field.storage.paragraph.field_location_type
     - paragraphs.paragraphs_type.address
-    - paragraphs.paragraphs_type.building
-    - paragraphs.paragraphs_type.group_contact_information
     - paragraphs.paragraphs_type.location
     - paragraphs.paragraphs_type.service_location
   module:
@@ -32,19 +30,17 @@ settings:
     negate: 0
     target_bundles:
       service_location: service_location
-      group_contact_information: group_contact_information
-      building: building
       address: address
     target_bundles_drag_drop:
       service_location:
         enabled: true
         weight: -33
       group_contact_information:
-        enabled: true
         weight: -32
+        enabled: false
       building:
-        enabled: true
         weight: -31
+        enabled: false
       address:
         enabled: true
         weight: -30
@@ -83,5 +79,32 @@ settings:
         enabled: false
       video:
         weight: -18
+        enabled: false
+      audio:
+        weight: 27
+        enabled: false
+      card:
+        weight: 29
+        enabled: false
+      card_deck:
+        weight: 30
+        enabled: false
+      council_agenda_item:
+        weight: 32
+        enabled: false
+      council_agenda_section:
+        weight: 33
+        enabled: false
+      council_communication_item:
+        weight: 34
+        enabled: false
+      quote:
+        weight: 42
+        enabled: false
+      votes:
+        weight: 49
+        enabled: false
+      webform:
+        weight: 50
         enabled: false
 field_type: entity_reference_revisions
