--- a/web/sites/default/config/core.entity_form_display.paragraph.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_location.default.yml
@@ -3,7 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
-    - entity_browser.browser.service_locations
+    - entity_browser.browser.locations_browser
     - field.field.paragraph.service_location.field_service_location
     - paragraphs.paragraphs_type.service_location
   module:
@@ -16,7 +16,7 @@ content:
   field_service_location:
     weight: 101
     settings:
-      entity_browser: service_locations
+      entity_browser: locations_browser
       field_widget_display: label
       field_widget_edit: true
       field_widget_remove: true
