--- a/web/sites/default/config/field.storage.paragraph.field_location_type.yml
+++ b/web/sites/default/config/field.storage.paragraph.field_location_type.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   module:
     - entity_reference_revisions
+    - field_permissions
     - paragraphs
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: paragraph.field_location_type
 field_name: field_location_type
 entity_type: paragraph
