--- a/web/sites/default/config/user.role.sitewide_editor.yml
+++ b/web/sites/default/config/user.role.sitewide_editor.yml
@@ -24,6 +24,7 @@ permissions:
   - 'create code_chapter content'
   - 'create code_section content'
   - 'create code_title content'
+  - 'create field_event_location'
   - 'create field_popular'
   - 'create field_search_keywords'
   - 'create field_shortname_or_acronym'
@@ -73,6 +74,7 @@ permissions:
   - 'edit any service_location content'
   - 'edit any top_search content'
   - 'edit any video media'
+  - 'edit field_event_location'
   - 'edit field_menu_link'
   - 'edit field_popular'
   - 'edit field_search_keywords'
@@ -90,6 +92,7 @@ permissions:
   - 'edit own council_meeting content'
   - 'edit own development_permit content'
   - 'edit own event content'
+  - 'edit own field_event_location'
   - 'edit own field_menu_link'
   - 'edit own field_popular'
   - 'edit own field_search_keywords'
@@ -138,6 +141,7 @@ permissions:
   - 'view code_title revisions'
   - 'view development_permit revisions'
   - 'view event revisions'
+  - 'view field_event_location'
   - 'view field_menu_link'
   - 'view field_popular'
   - 'view field_search_keywords'
@@ -145,6 +149,7 @@ permissions:
   - 'view information revisions'
   - 'view news revisions'
   - 'view notification revisions'
+  - 'view own field_event_location'
   - 'view own field_menu_link'
   - 'view own field_popular'
   - 'view own field_search_keywords'
