POWR-1104 remove body content and embedded display mode for now. Hide geolocation until it works.

--- a/web/sites/default/config/core.entity_view_display.node.location.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.node.location.embedded.yml
@@ -1,11 +1,10 @@
 uuid: 059190ef-7626-4d09-82d1-f22280ce98fa
 langcode: en
-status: true
+status: false
 dependencies:
   config:
     - core.entity_view_mode.node.embedded
     - field.field.node.location.field_address_or_entrance
-    - field.field.node.location.field_body_content
     - field.field.node.location.field_geolocation
     - field.field.node.location.field_hours_of_operation
     - field.field.node.location.field_legacy_path
@@ -43,7 +42,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
-  field_body_content: true
   field_geolocation: true
   field_legacy_path: true
   field_summary: true
