--- a/web/sites/default/config/field.field.node.location.field_geolocation.yml
+++ b/web/sites/default/config/field.field.node.location.field_geolocation.yml
@@ -15,7 +15,7 @@ third_party_settings:
     weight: 0
     geocode_field: field_address_or_entrance
     reverse_geocode_field: ''
-    hidden: false
+    hidden: true
     disabled: false
     plugins:
       - googlemaps
