--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "role": "Product Lead"
         }
     ],
-    "repositories": {
+    "repositories": 
+    {
         "0": {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
@@ -95,6 +96,7 @@
         "drupal/textarea_widget_for_text": "^1.1",
         "drupal/time_field": "^1.1",
         "drupal/toc_filter": "^2.0@beta",
+        "drupal/toc_js": "^1.6",
         "drupal/transliterate_filenames": "^1.2",
         "drupal/twig_tweak": "^2.0",
         "drupal/views_bulk_operations": "^2.2",
