--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -37,6 +37,7 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - toc_js
         - field_body_content
 id: node.page.default
 targetEntityType: node
@@ -44,7 +45,7 @@ bundle: page
 mode: default
 content:
   field_body_content:
-    weight: 1
+    weight: 2
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -87,6 +88,11 @@ content:
             fi-def-at: false
     type: entity_reference_entity_view
     region: content
+  toc_js:
+    weight: 1
+    region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_audience: true
