--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -16,6 +16,7 @@ module:
   chosen_field: 0
   chosen_lib: 0
   ckeditor: 0
+  clamav: 0
   cleave: 0
   components: 0
   conditional_fields: 0
@@ -162,8 +163,8 @@ module:
   text: 0
   textarea_widget_for_text: 0
   time_field: 0
-  toc_api: 0
-  toc_filter: 0
+  toc_js: 0
+  toc_js_per_node: 0
   token: 0
   toolbar: 0
   transliterate_filenames: 0
