updating composer.json and composer.lock

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,25 @@
     {
         "0": {
             "type": "composer",
-            "url": "https://packages.drupal.org/8"
+            "url": "https://packages.drupal.org/8",
+            "repositories": [
+                {
+                    "type": "composer",
+                    "url": "https://packages.drupal.org/8"
+                },
+                {
+                    "type": "package",
+                    "package": {
+                        "name": "toc/toc",
+                        "version": "v0.3.2",
+                        "type": "drupal-library",
+                        "dist": {
+                            "url": "https://raw.githubusercontent.com/jgallen23/toc/greenkeeper/update-all/dist/toc.min.js",
+                            "type": "file"
+                        }
+                    }
+                }
+            ]
         },
         "1": {
             "type": "composer",
