POWR-949 removed and ignored  files we don't want managed/deployed, committed backup versions

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,17 @@ pantheon.upstream.yml
 #   $settings['container_yamls'][] = __DIR__ . '/services.local.yml';
 web/sites/*/services.local.yml
 
+# Ignore services.yml; this file has been removed from the repo, and the
+# production version will be manually managed via FTP. If the site:mode
+# is toggled in a local dev environment, services.yml gets updated and
+# could potentially be committed and pushed, overwriting prod values with
+# temporary local dev values.
+web/sites/default/services.yml
+
+# Ignore settings.pantheon.php; this file is managed by Pantheon and
+# should not exist in the repo
+web/sites/default/settings.pantheon.php
+
 # ** Only works in OSs that support newer versions of fnmatch (Bash 4+)
 web/sites/default/**/files
 web/sites/default/**/private
