POWR-1109 add button classes and style selector to simplified editor with embed

--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -49,10 +49,12 @@ settings:
             - SpecialChar
             - PasteFromWord
             - PasteText
+            - ShowBlocks
             - Source
+            - Styles
   plugins:
     stylescombo:
-      styles: ''
+      styles: "a.btn-cta|Call to action button\r\na.btn-cta-outline|Outline button\r\n"
     language:
       language_list: un
     linkit:
