--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_location
+    - field.field.node.news.field_news_type
     - field.field.node.news.field_published_on
     - field.field.node.news.field_related_content
     - field.field.node.news.field_reviewer
@@ -38,9 +39,17 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
+        - node_post_date
+        - field_news_type
         - field_summary
         - field_body_content
         - field_location
+    fields:
+      node_post_date:
+        plugin_id: node_post_date
+        weight: 1
+        label: inline
+        formatter: ds_post_date_long
 id: node.news.default
 targetEntityType: node
 bundle: news
@@ -48,7 +57,7 @@ mode: default
 content:
   field_body_content:
     type: text_default
-    weight: 2
+    weight: 4
     region: content
     label: hidden
     settings: {  }
@@ -99,7 +108,7 @@ content:
             fi-def-at: false
     region: content
   field_location:
-    weight: 3
+    weight: 5
     label: above
     settings:
       view_mode: teaser
@@ -115,8 +124,16 @@ content:
             classes: {  }
     type: entity_reference_entity_view
     region: content
+  field_news_type:
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
   field_summary:
-    weight: 1
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
