POWR-1189 Use fixed block type

--- a/web/sites/default/config/block.block.addgroupbuttons.yml
+++ b/web/sites/default/config/block.block.addgroupbuttons.yml
@@ -1,23 +1,23 @@
-uuid: 6585d7d0-f078-4c83-bdb5-10d1cc4519c0
+uuid: 40c3e202-713d-4750-a0b0-a994ef177bc2
 langcode: en
 status: true
 dependencies:
   content:
-    - 'block_content:basic:c87a02d2-755f-46b5-b5e6-ad065d9c31b9'
+    - 'block_content:basic:fe87057e-4f95-466b-8041-a63e514ee03b'
   module:
     - block_content
     - system
     - user
   theme:
     - cloudy
-id: add_group_buttons
+id: addgroupbuttons
 theme: cloudy
 region: content
 weight: -11
 provider: null
-plugin: 'block_content:c87a02d2-755f-46b5-b5e6-ad065d9c31b9'
+plugin: 'block_content:fe87057e-4f95-466b-8041-a63e514ee03b'
 settings:
-  id: 'block_content:c87a02d2-755f-46b5-b5e6-ad065d9c31b9'
+  id: 'block_content:fe87057e-4f95-466b-8041-a63e514ee03b'
   label: 'Add group buttons'
   provider: block_content
   label_display: '0'
