--- a/web/sites/default/config/block.block.addgroupbuttons_2.yml
+++ b/web/sites/default/config/block.block.addgroupbuttons_2.yml
@@ -1,29 +1,27 @@
-uuid: 40c3e202-713d-4750-a0b0-a994ef177bc2
+uuid: 442b4046-03c7-41c5-857a-bc3c89d7ff47
 langcode: en
 status: true
 dependencies:
-  content:
-    - 'block_content:basic:fe87057e-4f95-466b-8041-a63e514ee03b'
+  config:
+    - fixed_block_content.fixed_block_content.add_group_buttons
   module:
-    - block_content
+    - fixed_block_content
     - system
     - user
   theme:
     - cloudy
-id: addgroupbuttons
+id: addgroupbuttons_2
 theme: cloudy
 region: content
 weight: -11
 provider: null
-plugin: 'block_content:fe87057e-4f95-466b-8041-a63e514ee03b'
+plugin: 'fixed_block_content:add_group_buttons'
 settings:
-  id: 'block_content:fe87057e-4f95-466b-8041-a63e514ee03b'
+  id: 'fixed_block_content:add_group_buttons'
   label: 'Add group buttons'
-  provider: block_content
+  provider: fixed_block_content
   label_display: '0'
-  status: true
-  info: ''
-  view_mode: full
+  view_mode: ''
 visibility:
   request_path:
     id: request_path
