POWR-1102 renamed configs and csv, broke out categories and types into separate csvs, recreated policy_number field to be text, etc.

--- a/web/sites/default/config/core.entity_form_display.node.policy.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.policy.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.policy.field_policy_type
     - field.field.node.policy.field_reviewer
     - node.type.policy
+    - workflows.workflow.editorial
   module:
     - chosen_field
     - content_moderation
@@ -61,17 +62,18 @@ content:
     type: string_textfield
     region: content
   field_policy_category:
-    weight: 2
+    weight: 3
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_policy_number:
-    weight: 3
+    weight: 2
     settings:
+      size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: number
+    type: string_textfield
     region: content
   field_policy_type:
     weight: 1
