--- a/web/sites/default/config/field.field.node.policy.field_policy_number.yml
+++ b/web/sites/default/config/field.field.node.policy.field_policy_number.yml
@@ -1,4 +1,4 @@
-uuid: 157b2284-2fa2-4fbd-bc6b-8fed0cb2c5ac
+uuid: 34f88e54-d26e-4bc9-bea1-0eb5243b18df
 langcode: en
 status: true
 dependencies:
@@ -16,14 +16,10 @@ field_name: field_policy_number
 entity_type: node
 bundle: policy
 label: 'Policy number'
-description: ''
-required: true
+description: 'The city policy number, such as "ARA-1.01"'
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings:
-  min: null
-  max: null
-  prefix: ''
-  suffix: ''
-field_type: integer
+settings: {  }
+field_type: string
