--- a/web/sites/default/config/core.entity_form_display.taxonomy_term.policy_type.default.yml
+++ b/web/sites/default/config/core.entity_form_display.taxonomy_term.policy_type.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.taxonomy_term.policy_type.field_type_code
     - taxonomy.vocabulary.policy_type
   module:
     - path
@@ -13,16 +14,24 @@ bundle: policy_type
 mode: default
 content:
   description:
-    type: text_textfield
-    weight: 0
+    type: text_textarea
+    weight: 1
     region: content
+    settings:
+      placeholder: ''
+      rows: 5
+    third_party_settings: {  }
+  field_type_code:
+    weight: 2
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    type: string_textfield
+    region: content
   name:
     type: string_textfield
-    weight: -5
+    weight: 0
     region: content
     settings:
       size: 60
@@ -30,7 +39,7 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
