--- a/web/sites/default/config/group.type.project.yml
+++ b/web/sites/default/config/group.type.project.yml
@@ -5,6 +5,7 @@ dependencies: {  }
 id: project
 label: Project
 description: 'A project is a site for sharing guides, information, news, and/or events with the community with a set beginning and end date. A project may have one or more associated locations and services. All projects are run by one or more bureaus or offices and may be partially funded by public-private partnerships, other governmental organizations, or federal and state grants.'
-creator_membership: false
+creator_membership: true
 creator_wizard: false
-creator_roles: {  }
+creator_roles:
+  - project-admin
