--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -39,15 +39,15 @@ third_party_settings:
     regions:
       content:
         - field_featured_media
-        - node_post_date
         - field_news_type
+        - node_post_date
         - field_summary
         - field_body_content
         - field_location
     fields:
       node_post_date:
         plugin_id: node_post_date
-        weight: 1
+        weight: 2
         label: inline
         formatter: ds_post_date_long
 id: node.news.default
@@ -126,12 +126,19 @@ content:
     region: content
   field_news_type:
     type: entity_reference_label
-    weight: 2
+    weight: 1
     region: content
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     weight: 3
     label: hidden
