--- a/web/sites/default/config/webform.webform.apply_for_a_bike_rack.yml
+++ b/web/sites/default/config/webform.webform.apply_for_a_bike_rack.yml
@@ -1,4 +1,3 @@
-uuid: e25be13e-cf81-46c4-9fb1-ddcfe5f594ff
 langcode: en
 status: open
 dependencies: {  }
@@ -18,9 +17,13 @@ javascript: ''
 settings:
   ajax: false
   ajax_scroll_top: form
+  ajax_progress_type: ''
+  ajax_effect: ''
+  ajax_speed: null
   page: true
   page_submit_path: ''
   page_confirm_path: ''
+  page_admin_theme: false
   form_title: both
   form_submit_once: false
   form_exception_message: ''
@@ -92,6 +95,8 @@ settings:
   draft_auto_save: false
   draft_saved_message: ''
   draft_loaded_message: ''
+  draft_pending_single_message: ''
+  draft_pending_multiple_message: ''
   confirmation_type: page
   confirmation_title: ''
   confirmation_message: ''
@@ -102,6 +107,7 @@ settings:
   confirmation_back_attributes: {  }
   confirmation_exclude_query: false
   confirmation_exclude_token: false
+  confirmation_update: false
   limit_total: null
   limit_total_interval: null
   limit_total_message: ''
@@ -167,3 +173,4 @@ access:
     users: {  }
     permissions: {  }
 handlers: {  }
+uuid: e25be13e-cf81-46c4-9fb1-ddcfe5f594ff
