--- a/web/sites/default/config/webform.webform.last_thursdays_registration.yml
+++ b/web/sites/default/config/webform.webform.last_thursdays_registration.yml
@@ -1,4 +1,3 @@
-uuid: c664bbb3-e500-4565-ba23-26127dc2197f
 langcode: en
 status: open
 dependencies: {  }
@@ -18,9 +17,13 @@ javascript: ''
 settings:
   ajax: false
   ajax_scroll_top: form
+  ajax_progress_type: ''
+  ajax_effect: ''
+  ajax_speed: null
   page: true
   page_submit_path: ''
   page_confirm_path: ''
+  page_admin_theme: false
   form_title: both
   form_submit_once: false
   form_exception_message: ''
@@ -94,6 +97,8 @@ settings:
   draft_auto_save: false
   draft_saved_message: ''
   draft_loaded_message: ''
+  draft_pending_single_message: ''
+  draft_pending_multiple_message: ''
   confirmation_type: inline
   confirmation_title: ''
   confirmation_message: 'Thank you for registering for Last Thursdays on Alberta!&nbsp; Look for an e-mail confirming your registration and one with your vendor badge.&nbsp; Please print the vendor badge email out and have it with you when vending at any Last Thursdays on Alberta events.'
@@ -104,6 +109,7 @@ settings:
   confirmation_back_attributes: {  }
   confirmation_exclude_query: false
   confirmation_exclude_token: false
+  confirmation_update: false
   limit_total: null
   limit_total_interval: null
   limit_total_message: ''
@@ -281,3 +287,4 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: ''
+uuid: c664bbb3-e500-4565-ba23-26127dc2197f
