--- a/web/sites/default/config/webform.webform.website_feedback.yml
+++ b/web/sites/default/config/webform.webform.website_feedback.yml
@@ -1,4 +1,3 @@
-uuid: 3a7da01d-48a2-41b6-835f-18f745481403
 langcode: en
 status: open
 dependencies: {  }
@@ -18,9 +17,13 @@ javascript: ''
 settings:
   ajax: false
   ajax_scroll_top: form
+  ajax_progress_type: ''
+  ajax_effect: ''
+  ajax_speed: null
   page: true
   page_submit_path: feedback
   page_confirm_path: thank-you-for-feedback
+  page_admin_theme: false
   form_title: both
   form_submit_once: false
   form_exception_message: ''
@@ -92,6 +95,8 @@ settings:
   draft_auto_save: false
   draft_saved_message: ''
   draft_loaded_message: ''
+  draft_pending_single_message: ''
+  draft_pending_multiple_message: ''
   confirmation_type: inline
   confirmation_title: ''
   confirmation_message: 'Thank you for submitting your feedback, we appreciate your help!'
@@ -102,6 +107,7 @@ settings:
   confirmation_back_attributes: {  }
   confirmation_exclude_query: false
   confirmation_exclude_token: false
+  confirmation_update: false
   limit_total: null
   limit_total_interval: null
   limit_total_message: ''
@@ -205,3 +211,4 @@ handlers:
       sender_mail: ''
       sender_name: ''
       theme_name: cloudy
+uuid: 3a7da01d-48a2-41b6-835f-18f745481403
