POWR-1261 Allow Group Creator to set group acronym

--- a/web/sites/default/config/user.role.group_creator.yml
+++ b/web/sites/default/config/user.role.group_creator.yml
@@ -13,4 +13,5 @@ weight: 6
 is_admin: null
 permissions:
   - 'create advisory_group group'
+  - 'create field_shortname_or_acronym'
   - 'create project group'
