POWR-1156 Modify field descriptions

--- a/web/sites/default/config/field.field.node.park_facility.field_hours_of_operation.yml
+++ b/web/sites/default/config/field.field.node.park_facility.field_hours_of_operation.yml
@@ -25,7 +25,7 @@ field_name: field_hours_of_operation
 entity_type: node
 bundle: park_facility
 label: 'Open hours'
-description: ''
+description: 'For each day list the hours of operation'
 required: false
 translatable: true
 default_value: {  }
