--- a/web/sites/default/config/field.field.node.park_facility.field_location_status.yml
+++ b/web/sites/default/config/field.field.node.park_facility.field_location_status.yml
@@ -17,7 +17,7 @@ field_name: field_location_status
 entity_type: node
 bundle: park_facility
 label: 'Location status'
-description: ''
+description: 'Three levels of alert information for that location'
 required: false
 translatable: false
 default_value: {  }
