POWR-1156 Adjust park location browser

--- a/web/sites/default/config/core.entity_form_display.node.location.short_location_form.yml
+++ b/web/sites/default/config/core.entity_form_display.node.location.short_location_form.yml
@@ -14,6 +14,7 @@ dependencies:
   module:
     - address
     - content_moderation
+    - geofield
     - maxlength
     - path
 id: node.location.short_location_form
@@ -27,8 +28,15 @@ content:
     third_party_settings: {  }
     type: address_default
     region: content
+  field_geolocation:
+    type: geofield_latlon
+    weight: 2
+    region: content
+    settings:
+      html5_geolocation: false
+    third_party_settings: {  }
   field_legacy_path:
-    weight: 3
+    weight: 4
     settings:
       size: 60
       placeholder: ''
@@ -36,7 +44,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 2
+    weight: 3
     settings:
       rows: 2
       placeholder: ''
@@ -50,13 +58,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 7
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 4
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -72,13 +80,12 @@ content:
         maxlength_js: 78
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   url_redirects:
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
-  field_geolocation: true
   field_hours_of_operation: true
   promote: true
   status: true
