--- a/web/sites/default/config/entity_browser.browser.park_locations_browser.yml
+++ b/web/sites/default/config/entity_browser.browser.park_locations_browser.yml
@@ -11,9 +11,9 @@ name: park_locations_browser
 label: 'Park locations browser'
 display: modal
 display_configuration:
-  width: '650'
-  height: '500'
-  link_text: 'Select entities'
+  width: ''
+  height: '800'
+  link_text: 'Select locations'
   auto_open: false
 selection_display: no_display
 selection_display_configuration: {  }
