POWR-1156 Adjust form. New workflow for Location.

--- a/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
@@ -16,7 +16,7 @@ dependencies:
     - field.field.node.park_facility.field_park_amenities_activities
     - field.field.node.park_facility.field_park_location_type
     - field.field.node.park_facility.field_portlandmaps_id
-    - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_year_acquired
     - node.type.park_facility
@@ -61,7 +61,7 @@ hidden:
   field_location_status: true
   field_park_amenities_activities: true
   field_portlandmaps_id: true
-  field_property_id: true
+  field_search_keywords: true
   field_size_in_acres: true
   field_year_acquired: true
   links: true
