--- a/web/sites/default/config/field.field.node.park_facility.field_year_acquired.yml
+++ b/web/sites/default/config/field.field.node.park_facility.field_year_acquired.yml
@@ -22,7 +22,7 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  min: null
+  min: 1800
   max: null
   prefix: ''
   suffix: ''
