--- a/web/sites/default/config/field.storage.node.field_property_id.yml
+++ b/web/sites/default/config/field.storage.node.field_property_id.yml
@@ -1,4 +1,4 @@
-uuid: 1b6a43e8-68be-4434-ac67-448d26fd6ef1
+uuid: a8fa8ba6-10cc-4fc7-9304-02b5cd26da83
 langcode: en
 status: true
 dependencies:
@@ -11,11 +11,10 @@ third_party_settings:
 id: node.field_property_id
 field_name: field_property_id
 entity_type: node
-type: string
+type: integer
 settings:
-  max_length: 255
-  is_ascii: false
-  case_sensitive: false
+  unsigned: false
+  size: normal
 module: core
 locked: false
 cardinality: 1
