--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -16,10 +16,10 @@ dependencies:
     - node.type.council_meeting
     - node.type.development_permit
     - node.type.event
-    - node.type.location
     - node.type.news
     - node.type.notification
     - node.type.page
+    - node.type.park_facility
     - node.type.policy
     - node.type.service_location
   module:
@@ -107,10 +107,10 @@ type_settings:
       - council_meeting
       - development_permit
       - event
-      - location
       - news
       - notification
       - page
+      - park_facility
       - policy
       - service_location
   default_moderation_state: draft
