--- a/web/sites/default/config/core.entity_form_display.node.location.short_location_form.yml
+++ b/web/sites/default/config/core.entity_form_display.node.location.short_location_form.yml
@@ -35,14 +35,6 @@ content:
     settings:
       html5_geolocation: false
     third_party_settings: {  }
-  field_legacy_path:
-    weight: 4
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_summary:
     weight: 3
     settings:
@@ -58,13 +50,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 6
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -80,13 +72,14 @@ content:
         maxlength_js: 78
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   url_redirects:
-    weight: 6
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   created: true
   field_hours_of_operation: true
+  field_legacy_path: true
   promote: true
   status: true
   sticky: true
