--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -17,10 +17,12 @@ dependencies:
     - field.field.node.park_facility.field_park_location_type
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_year_acquired
     - node.type.park_facility
   module:
+    - allowed_formats
     - chosen_field
     - content_moderation
     - entity_browser
@@ -41,9 +43,17 @@ content:
   field_alert_text:
     weight: 13
     settings:
-      rows: 5
+      rows: 3
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     type: text_textarea
     region: content
   field_body_content:
@@ -51,7 +61,15 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     type: text_textarea
     region: content
   field_history:
@@ -59,15 +77,31 @@ content:
     settings:
       rows: 5
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     type: text_textarea
     region: content
   field_hours_of_operation:
     weight: 6
     settings:
-      rows: 5
+      rows: 3
       placeholder: ''
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: null
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
     type: text_textarea
     region: content
   field_images:
@@ -95,12 +129,9 @@ content:
     region: content
   field_located_within:
     weight: 5
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: chosen_select
     region: content
   field_location_status:
     weight: 12
@@ -145,6 +176,13 @@ content:
     region: content
   field_property_id:
     weight: 1
+    settings:
+      placeholder: ''
+    third_party_settings: {  }
+    type: number
+    region: content
+  field_search_keywords:
+    weight: 22
     settings:
       size: 60
       placeholder: ''
