--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.park_facility.field_park_location_type
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_year_acquired
     - node.type.park_facility
@@ -118,6 +119,15 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
+  field_property_id:
+    weight: 12
+    label: above
+    settings:
+      thousand_separator: ''
+      prefix_suffix: true
+    third_party_settings: {  }
+    type: number_integer
+    region: content
   field_size_in_acres:
     weight: 6
     label: hidden
@@ -141,5 +151,5 @@ content:
 hidden:
   field_legacy_path: true
   field_portlandmaps_id: true
-  field_property_id: true
+  field_search_keywords: true
   links: true
