--- a/web/sites/default/config/field.field.node.park_facility.field_property_id.yml
+++ b/web/sites/default/config/field.field.node.park_facility.field_property_id.yml
@@ -1,4 +1,4 @@
-uuid: 67fc75f2-f6d0-4140-b1e2-f22211eb93f8
+uuid: 3bbf22ef-e1bd-4f71-aee3-52b8a4682859
 langcode: en
 status: true
 dependencies:
@@ -16,10 +16,14 @@ field_name: field_property_id
 entity_type: node
 bundle: park_facility
 label: 'Property ID'
-description: ''
+description: 'The property ID from POG.'
 required: true
 translatable: false
 default_value: {  }
 default_value_callback: ''
-settings: {  }
-field_type: string
+settings:
+  min: 0
+  max: null
+  prefix: ''
+  suffix: ''
+field_type: integer
