POWR-1156 Add "manage park" view. Permission updat

--- a/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.teaser.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.park_facility.field_park_amenities_activities
     - field.field.node.park_facility.field_park_location_type
     - field.field.node.park_facility.field_portlandmaps_id
+    - field.field.node.park_facility.field_property_id
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_year_acquired
@@ -51,6 +52,7 @@ content:
       link: true
     third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_alert_text: true
   field_body_content: true
   field_history: true
@@ -61,6 +63,7 @@ hidden:
   field_location_status: true
   field_park_amenities_activities: true
   field_portlandmaps_id: true
+  field_property_id: true
   field_search_keywords: true
   field_size_in_acres: true
   field_year_acquired: true
