--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -22,6 +22,7 @@ permissions:
   - 'access locations_browser entity browser pages'
   - 'access media overview'
   - 'access media_browser entity browser pages'
+  - 'access park_locations_browser entity browser pages'
   - 'access service_locations entity browser pages'
   - 'access shortcuts'
   - 'access user profiles'
@@ -57,6 +58,11 @@ permissions:
   - 'use editorial transition publish'
   - 'use editorial transition review'
   - 'use editorial transition send_to_review'
+  - 'use editorial_default_published transition archive'
+  - 'use editorial_default_published transition create_new_draft'
+  - 'use editorial_default_published transition publish'
+  - 'use editorial_default_published transition restore'
+  - 'use editorial_default_published transition send_to_review'
   - 'use media transition archive'
   - 'use media transition publish'
   - 'use media transition restore'
