--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -99,8 +99,16 @@ content:
     weight: 3
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
+      link: false
+    third_party_settings:
+      ds:
+        ds_limit: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     type: entity_reference_label
     region: content
   field_park_amenities_activities:
@@ -149,6 +157,7 @@ content:
     type: number_integer
     region: content
 hidden:
+  content_moderation_control: true
   field_legacy_path: true
   field_portlandmaps_id: true
   field_search_keywords: true
