--- a/web/sites/default/config/core.menu.static_menu_link_overrides.yml
+++ b/web/sites/default/config/core.menu.static_menu_link_overrides.yml
@@ -1,3 +1,15 @@
-definitions: {  }
+definitions:
+  portland__my-profile:
+    weight: -47
+    menu_name: editor-toolbar
+    parent: ''
+    expanded: false
+    enabled: true
+  portland__logout:
+    weight: -42
+    menu_name: editor-toolbar
+    parent: ''
+    expanded: false
+    enabled: true
 _core:
   default_config_hash: jdY7AU0tU-QsjmiOw3W8vwpYMb-By--_MSFgbqKUTYM
