POWR-1254 Clean up content view to make orphans more apparent

--- a/web/sites/default/config/content_lock.settings.yml
+++ b/web/sites/default/config/content_lock.settings.yml
@@ -21,6 +21,7 @@ types:
   webform_submission: {  }
   menu_link_content: {  }
   paragraph: {  }
+  entity_embed_fake_entity: {  }
 types_translation_lock: {  }
 types_js_lock:
   - group
@@ -46,8 +47,9 @@ form_op_lock:
     mode: null
     values: {  }
   group:
-    mode: 0
-    values: {  }
+    mode: 1
+    values:
+      edit: edit
   group_content:
     mode: 0
     values: {  }
@@ -55,8 +57,9 @@ form_op_lock:
     mode: 0
     values: {  }
   node:
-    mode: 0
-    values: {  }
+    mode: 1
+    values:
+      edit: edit
   redirect:
     mode: 0
     values: {  }
@@ -83,6 +86,9 @@ form_op_lock:
     values: {  }
   paragraph:
     mode: 0
+    values: {  }
+  entity_embed_fake_entity:
+    mode: null
     values: {  }
 _core:
   default_config_hash: 6Ka3T1c-CIjEUO1Q64NXKksLthkMhj53a6zy4RJBtkc
