--- a/web/sites/default/config/views.view.user_admin_people.yml
+++ b/web/sites/default/config/views.view.user_admin_people.yml
@@ -875,6 +875,17 @@ display:
         groups:
           1: AND
       display_extenders: {  }
+      header:
+        result:
+          id: result
+          table: views
+          field: result
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: false
+          content: 'Displaying @start - @end of @total people'
+          plugin_id: result
     cache_metadata:
       contexts:
         - 'languages:language_content'
