POWR-1254 update the group module

--- a/web/sites/default/config/views.view.group_documents.yml
+++ b/web/sites/default/config/views.view.group_documents.yml
@@ -1146,15 +1146,16 @@ display:
         groups:
           1: AND
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
-        - 'url.query_args:sort_by'
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: route
+        4: url
+        5: url.query_args
+        6: 'url.query_args:sort_by'
+        7: route.group
+        8: user.group_permissions
       tags: {  }
   page_2:
     display_plugin: page
