--- a/web/sites/default/config/views.view.group_media.yml
+++ b/web/sites/default/config/views.view.group_media.yml
@@ -1113,14 +1113,15 @@ display:
           1: AND
       css_class: view-admin-group-content
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: route
+        4: url
+        5: url.query_args
+        6: route.group
+        7: user.group_permissions
       tags: {  }
   page_1:
     display_plugin: page
@@ -1134,14 +1135,15 @@ display:
       defaults:
         relationships: true
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: route
+        4: url
+        5: url.query_args
+        6: route.group
+        7: user.group_permissions
       tags: {  }
   page_3:
     display_plugin: page
@@ -2742,10 +2744,11 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: route
+        4: url
+        5: url.query_args
+        6: route.group
+        7: user.group_permissions
       tags: {  }
