--- a/web/sites/default/config/views.view.group_members.yml
+++ b/web/sites/default/config/views.view.group_members.yml
@@ -595,11 +595,12 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-        - url.query_args
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: url
+        4: url.query_args
+        5: route.group
+        6: user.group_permissions
       tags:
         - 'config:field.storage.group_content.group_roles'
   page_1:
@@ -623,10 +624,11 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - url
-        - url.query_args
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: url
+        4: url.query_args
+        5: route.group
+        6: user.group_permissions
       tags:
         - 'config:field.storage.group_content.group_roles'
