--- a/web/sites/default/config/views.view.group_nodes.yml
+++ b/web/sites/default/config/views.view.group_nodes.yml
@@ -1052,15 +1052,16 @@ display:
         groups:
           1: AND
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
-        - 'user.node_grants:view'
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: route
+        4: url
+        5: url.query_args
+        6: 'user.node_grants:view'
+        7: route.group
+        8: user.group_permissions
       tags:
         - 'config:field.storage.node.field_reviewer'
   page_1:
@@ -1081,14 +1082,15 @@ display:
         context: '0'
         menu_name: main
     cache_metadata:
-      max-age: 0
+      max-age: -1
       contexts:
-        - group_membership.roles.permissions
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-        - url.query_args
-        - 'user.node_grants:view'
+        1: 'languages:language_content'
+        2: 'languages:language_interface'
+        3: route
+        4: url
+        5: url.query_args
+        6: 'user.node_grants:view'
+        7: route.group
+        8: user.group_permissions
       tags:
         - 'config:field.storage.node.field_reviewer'
