--- a/web/sites/default/config/embed.button.image_browser.yml
+++ b/web/sites/default/config/embed.button.image_browser.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - media.type.image
   module:
     - entity_embed
@@ -14,8 +15,7 @@ type_settings:
   entity_type: media
   bundles:
     - image
-  display_plugins:
-    - 'view_mode:media.embedded'
+  display_plugins: {  }
   entity_browser: image_browser_embed
   entity_browser_settings:
     display_review: false
