POWR-1156 Tweak park admin view

--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -51,6 +51,10 @@ permissions:
   - 'schedule editorial transition archived_published'
   - 'schedule editorial transition create_new_draft'
   - 'schedule editorial transition publish'
+  - 'schedule editorial_default_published transition archive'
+  - 'schedule editorial_default_published transition create_new_draft'
+  - 'schedule editorial_default_published transition publish'
+  - 'schedule editorial_default_published transition restore'
   - 'use editorial transition archive'
   - 'use editorial transition archived_draft'
   - 'use editorial transition archived_published'
