--- a/web/sites/default/config/views.view.admin_park_facilities.yml
+++ b/web/sites/default/config/views.view.admin_park_facilities.yml
@@ -1,4 +1,4 @@
-uuid: 7b2b39e4-a24b-41e9-8db7-2ed37d01ad95
+uuid: d197c0db-e602-4f49-a7d2-a24543972e39
 langcode: en
 status: true
 dependencies:
@@ -8,7 +8,6 @@ dependencies:
     - user.role.administrator
     - user.role.park_editor
     - user.role.sitewide_editor
-    - workflows.workflow.editorial
   module:
     - content_moderation
     - node
@@ -17,10 +16,10 @@ dependencies:
 id: admin_park_facilities
 label: 'Admin: Park facilities'
 module: views
-description: 'Administrative view to edit park facilities'
+description: ''
 tag: ''
-base_table: node_field_data
-base_field: nid
+base_table: node_field_revision
+base_field: vid
 core: 8.x
 display:
   default:
@@ -89,9 +88,9 @@ display:
           columns:
             views_bulk_operations_bulk_form: views_bulk_operations_bulk_form
             title: title
+            changed: changed
             status: status
             moderation_state: moderation_state
-            changed: changed
             operations: operations
           info:
             views_bulk_operations_bulk_form:
@@ -106,21 +105,21 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            status:
+            changed:
               sortable: true
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            moderation_state:
+            status:
               sortable: false
               default_sort_order: asc
               align: ''
               separator: ''
               empty_column: false
               responsive: ''
-            changed:
+            moderation_state:
               sortable: true
               default_sort_order: asc
               align: ''
@@ -194,38 +193,38 @@ display:
           selected_actions:
             'entity:break_lock:node': 0
             'moderation_state_change:node': 0
-            node_unpublish_action: 0
-            node_unpromote_action: 0
-            node_save_action: 0
-            node_make_sticky_action: 0
-            node_promote_action: 0
-            node_make_unsticky_action: 0
             node_publish_action: 0
+            node_make_sticky_action: 0
+            node_save_action: 0
+            node_promote_action: 0
             node_unpublish_by_keyword_action: 0
             node_assign_owner_action: 0
-            change_group_action: 0
-            portland_archive_action: portland_archive_action
+            node_make_unsticky_action: 0
+            node_unpublish_action: 0
+            node_unpromote_action: 0
             mark_for_review_action: mark_for_review_action
+            portland_archive_action: portland_archive_action
+            change_group_action: 0
             portland_publish_action: portland_publish_action
             views_bulk_operations_delete_entity: views_bulk_operations_delete_entity
             pathauto_update_alias: 0
             'entity:save_action:node': 0
             'entity:unpublish_action:node': 0
-            'entity:delete_action:node': 0
             'entity:publish_action:node': 0
+            'entity:delete_action:node': 0
           preconfiguration:
-            portland_archive_action:
-              label_override: 'Archive content'
             mark_for_review_action:
-              label_override: 'Mark content for review'
+              label_override: ''
+            portland_archive_action:
+              label_override: ''
             portland_publish_action:
-              label_override: 'Publish content'
+              label_override: ''
             views_bulk_operations_delete_entity:
-              label_override: 'Delete content'
+              label_override: ''
           plugin_id: views_bulk_operations_bulk_form
         title:
           id: title
-          table: node_field_data
+          table: node_field_revision
           field: title
           entity_type: node
           entity_field: title
@@ -241,7 +240,7 @@ display:
           hide_empty: false
           empty_zero: false
           settings:
-            link_to_entity: true
+            link_to_entity: false
           plugin_id: field
           relationship: none
           group_type: group
@@ -270,11 +269,60 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
+        changed:
+          id: changed
+          table: node_field_revision
+          field: changed
+          entity_type: node
+          entity_field: changed
+          alter:
+            alter_text: false
+            make_link: false
+            absolute: false
+            trim: false
+            word_boundary: false
+            ellipsis: false
+            strip_tags: false
+            html: false
+          hide_empty: false
+          empty_zero: false
+          plugin_id: field
+          type: timestamp
+          settings:
+            date_format: medium
+            custom_date_format: ''
+            timezone: ''
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Changed
+          exclude: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_alter_empty: true
+          click_sort_column: value
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
         status:
           id: status
           table: node_field_data
           field: status
-          relationship: none
+          relationship: nid
           group_type: group
           admin_label: ''
           label: Published
@@ -344,7 +392,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Current revision'
+          label: 'Moderation state'
           exclude: false
           alter:
             alter_text: false
@@ -400,78 +448,11 @@ display:
           field_api_classes: false
           entity_type: node
           plugin_id: field
-        changed:
-          id: changed
-          table: node_field_data
-          field: changed
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: Changed
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: true
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: timestamp
-          settings:
-            date_format: short
-            custom_date_format: ''
-            timezone: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: node
-          entity_field: changed
-          plugin_id: field
         operations:
           id: operations
-          table: node
+          table: node_revision
           field: operations
-          relationship: none
+          relationship: nid
           group_type: group
           admin_label: ''
           label: 'Operations links'
@@ -518,143 +499,95 @@ display:
           destination: false
           entity_type: node
           plugin_id: entity_operations
-      filters:
         type:
           id: type
           table: node_field_data
           field: type
-          value:
-            park_facility: park_facility
+          relationship: nid
+          group_type: group
+          admin_label: ''
+          label: 'Content type'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: true
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
           entity_type: node
           entity_field: type
-          plugin_id: bundle
-          group: 1
-        title:
-          id: title
-          table: node_field_data
-          field: title
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: word
-          value: ''
-          group: 1
-          exposed: true
-          expose:
-            operator_id: title_op
-            label: 'Title contains'
-            description: ''
-            use_operator: false
-            operator: title_op
-            identifier: title
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
-            placeholder: ''
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          entity_field: title
-          plugin_id: string
-        moderation_state:
-          id: moderation_state
-          table: node_field_data
-          field: moderation_state
-          relationship: none
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            all: all
-            editorial-published: editorial-published
-            editorial-draft: editorial-draft
-            editorial-review: editorial-review
-            editorial-archived: editorial-archived
-          group: 1
-          exposed: true
-          expose:
-            operator_id: moderation_state_op
-            label: 'Moderation state'
-            description: ''
-            use_operator: false
-            operator: moderation_state_op
-            identifier: moderation_state
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: node
-          plugin_id: moderation_state_filter
-        status:
-          id: status
-          table: node_field_data
-          field: status
+          plugin_id: field
+      filters:
+        latest_translation_affected_revision:
+          id: latest_translation_affected_revision
+          table: node_revision
+          field: latest_translation_affected_revision
           relationship: none
           group_type: group
           admin_label: ''
           operator: '='
-          value: All
+          value: ''
           group: 1
-          exposed: true
+          exposed: false
           expose:
             operator_id: ''
-            label: Published
+            label: ''
             description: ''
             use_operator: false
-            operator: status_op
-            identifier: status
+            operator: ''
+            identifier: ''
             required: false
             remember: false
             multiple: false
             remember_roles:
               authenticated: authenticated
-              anonymous: '0'
-              administrator: '0'
-              sitewide_editor: '0'
-              code_editor: '0'
-              council_clerk: '0'
-              group_creator: '0'
-              park_editor: '0'
           is_grouped: false
           group_info:
             label: ''
@@ -668,17 +601,57 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: node
-          entity_field: status
-          plugin_id: boolean
+          plugin_id: latest_translation_affected_revision
+        type:
+          id: type
+          table: node_field_data
+          field: type
+          relationship: nid
+          group_type: group
+          admin_label: ''
+          operator: in
+          value:
+            park_facility: park_facility
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+            argument: null
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          entity_type: node
+          entity_field: type
+          plugin_id: bundle
       sorts:
         changed:
           id: changed
-          table: node_field_data
+          table: node_field_revision
           field: changed
           relationship: none
           group_type: group
           admin_label: ''
-          order: ASC
+          order: DESC
           exposed: false
           expose:
             label: ''
@@ -686,6 +659,18 @@ display:
           entity_type: node
           entity_field: changed
           plugin_id: date
+      relationships:
+        nid:
+          id: nid
+          table: node_field_revision
+          field: nid
+          relationship: none
+          group_type: group
+          admin_label: 'Get the actual content from a content revision.'
+          required: true
+          entity_type: node
+          entity_field: nid
+          plugin_id: standard
       title: 'Admin: Park facilities'
       header:
         area_text_custom:
@@ -701,7 +686,6 @@ display:
           plugin_id: text_custom
       footer: {  }
       empty: {  }
-      relationships: {  }
       arguments: {  }
       display_extenders: {  }
       filter_groups:
@@ -713,12 +697,10 @@ display:
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.roles
-      tags:
-        - 'config:workflow_list'
+      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -730,16 +712,18 @@ display:
       menu:
         type: normal
         title: 'Manage park facilities'
+        description: ''
+        expanded: false
+        parent: ''
+        weight: -46
+        context: '0'
         menu_name: editor-toolbar
-        weight: -45
     cache_metadata:
       max-age: 0
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
-        - url
         - url.query_args
         - 'user.node_grants:view'
         - user.roles
-      tags:
-        - 'config:workflow_list'
+      tags: {  }
