POWR-1156 Add workaround for Park view

--- a/web/sites/default/config/views.view.admin_park_facilities.yml
+++ b/web/sites/default/config/views.view.admin_park_facilities.yml
@@ -41,7 +41,7 @@ display:
       query:
         type: views_query
         options:
-          disable_sql_rewrite: false
+          disable_sql_rewrite: true
           distinct: false
           replica: false
           query_comment: ''
@@ -667,7 +667,7 @@ display:
           relationship: none
           group_type: group
           admin_label: 'Get the actual content from a content revision.'
-          required: true
+          required: false
           entity_type: node
           entity_field: nid
           plugin_id: standard
