POWR-1156 Update Park admin view

--- a/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.park_facility.default.yml
@@ -17,10 +17,12 @@ dependencies:
     - field.field.node.park_facility.field_park_location_type
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_reviewer
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_year_acquired
     - node.type.park_facility
+    - workflows.workflow.editorial
   module:
     - allowed_formats
     - chosen_field
@@ -181,8 +183,17 @@ content:
     third_party_settings: {  }
     type: number
     region: content
+  field_reviewer:
+    weight: 21
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
   field_search_keywords:
-    weight: 22
+    weight: 23
     settings:
       size: 60
       placeholder: ''
@@ -219,7 +230,7 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 21
+    weight: 22
     region: content
     third_party_settings: {  }
   title:
