--- a/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.park_facility.default.yml
@@ -16,6 +16,7 @@ dependencies:
     - field.field.node.park_facility.field_park_location_type
     - field.field.node.park_facility.field_portlandmaps_id
     - field.field.node.park_facility.field_property_id
+    - field.field.node.park_facility.field_reviewer
     - field.field.node.park_facility.field_search_keywords
     - field.field.node.park_facility.field_size_in_acres
     - field.field.node.park_facility.field_year_acquired
@@ -160,5 +161,6 @@ hidden:
   content_moderation_control: true
   field_legacy_path: true
   field_portlandmaps_id: true
+  field_reviewer: true
   field_search_keywords: true
   links: true
