POWR-1156 No result text for Park admin view

--- a/web/sites/default/config/views.view.admin_park_facilities.yml
+++ b/web/sites/default/config/views.view.admin_park_facilities.yml
@@ -991,7 +991,20 @@ display:
           content: "<a href=\"/node/add/park_facility\" class=\"button btn-cta\">Add park facility</a>\r\n<p class=\"muted\">Use this to add park facility.</p>"
           plugin_id: text_custom
       footer: {  }
-      empty: {  }
+      empty:
+        area:
+          id: area
+          table: views
+          field: area
+          relationship: none
+          group_type: group
+          admin_label: ''
+          empty: true
+          tokenize: false
+          content:
+            value: 'No result found.'
+            format: basic_style_editor
+          plugin_id: text
       arguments: {  }
       display_extenders: {  }
       filter_groups:
